--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Luna</title>
+    <audio id="bgMusic" loop>
+      <source src="saiko.mp3" type="audio/mpeg" />
+      <source src="saiko.ogg" type="audio/ogg" />
+    </audio>
+
+    <div class="music-player">
+      <button id="musicToggle" aria-label="Reproducir/Pausar música">🎵</button>
+      <input
+        type="range"
+        id="volumeControl"
+        min="0"
+        max="1"
+        step="0.1"
+        value="0.5"
+        aria-label="Control de volumen"
+        title="Ajustar volumen"
+      />
+    </div>
     <style>
       body,
       html {
@@ -74,7 +92,15 @@
       .background-image:nth-child(5) {
         grid-column: 2;
         grid-row: 1 / 3;
-        opacity: 0.3;
+        opacity: 0.9;
+      }
+      .background-image:nth-child(6) {
+        grid-column: 1;
+        grid-row: 3;
+      }
+      .background-image:nth-child(7) {
+        grid-column: 3;
+        grid-row: 3;
       }
 
       .container {
@@ -186,7 +212,7 @@
         position: absolute;
         width: 100%;
         height: 100%;
-        background: #573010;
+        background: #573010a0;
         border-radius: 15px;
         backface-visibility: hidden;
         transform: rotateX(180deg);
@@ -195,8 +221,8 @@
       .letter {
         position: absolute;
         width: 350px;
-        height: 300px;
-        background: white;
+
+        background: rgba(255, 255, 255, 0.641);
         border-radius: 15px;
         box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
         padding: 30px;
@@ -254,97 +280,64 @@
       }
 
       /* Responsiveness */
-      @media (max-width: 768px) {
+
+      @media (max-width: 800px) {
+        .message {
+          font-size: 0.9rem;
+        }
+
+        .letter-content {
+          font-size: 0.8rem;
+        }
+        /* Contenedor de imágenes */
         .background-container {
-          grid-template-columns: 1fr 1fr;
-          grid-template-rows: repeat(3, 1fr);
-          gap: 10px;
-          padding: 10px;
-        }
-
-        .background-image {
-          aspect-ratio: 1;
-          height: auto;
-          border-radius: 10px;
-        }
-
-        .envelope {
-          width: 300px;
-          height: 180px;
-        }
-
-        .letter {
-          width: 250px;
-          padding: 20px;
-        }
-
-        .letter-content h2 {
-          font-size: 20px;
-        }
-
-        .letter-content p {
-          font-size: 16px;
-        }
-      }
-
-      @media (max-width: 480px) {
-        .background-container {
-          grid-template-columns: 1fr 1fr;
+          grid-template-columns: repeat(3, 1fr);
           grid-template-rows: repeat(3, 1fr);
           gap: 5px;
+          padding: 5px;
         }
 
         .background-image {
-          border-radius: 5px;
-        }
+          .polaroid {
+            padding: 8px;
+          }
 
-        .envelope {
-          width: 250px;
-          height: 150px;
-        }
+          .message-text {
+            font-size: 1.2rem;
+          }
 
-        .letter {
-          width: 220px;
-          padding: 15px;
-        }
-
-        .letter-content h2 {
-          font-size: 18px;
-        }
-
-        .letter-content p {
-          font-size: 14px;
+          .collage-container {
+            height: 500px;
+          }
         }
       }
+      .music-player {
+        position: absolute;
 
-      @media (max-width: 320px) {
-        .background-container {
-          grid-template-columns: 1fr 1fr;
-          grid-template-rows: repeat(3, 1fr);
-          gap: 2px;
-        }
+        bottom: 20px;
 
-        .background-image {
-          border-radius: 3px;
-        }
+        z-index: 999;
+        display: flex;
+        gap: 10px;
+        align-items: center;
+        background: rgba(255, 255, 255, 0.9);
+        padding: 0px;
+        border-radius: 25px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      }
 
-        .envelope {
-          width: 200px;
-          height: 120px;
-        }
+      #musicToggle {
+        border: none;
+        background: none;
+        font-size: 24px;
+        cursor: pointer;
+        padding: 5px;
+      }
 
-        .letter {
-          width: 180px;
-          padding: 10px;
-        }
-
-        .letter-content h2 {
-          font-size: 16px;
-        }
-
-        .letter-content p {
-          font-size: 12px;
-        }
+      #volumeControl {
+        width: 80px;
+        height: 5px;
+        accent-color: #573010;
       }
     </style>
   </head>
@@ -356,6 +349,8 @@
       <img src="imagenes/3.png" class="background-image" alt="Background 3" />
       <img src="imagenes/4.png" class="background-image" alt="Background 4" />
       <img src="imagenes/5.png" class="background-image" alt="Background 5" />
+      <img src="imagenes/6.png" class="background-image" alt="Background 6" />
+      <img src="imagenes/7.png" class="background-image" alt="Background 7" />
     </div>
 
     <div class="container">
@@ -372,10 +367,17 @@
       </div>
       <div class="letter" id="letter">
         <div class="letter-content">
-          <h2>Luna 🤎</h2>
+          <h2>🤎😘💌</h2>
           <p>
-            Después de conocerte y compartir momentos contigo me di cuenta de lo
-            mucho que te quiero y lo especial que eres para mí.
+            Amor, en todo este tiempo me he dado cuenta de lo feliz que me
+            haces, de lo completo que me haces sentir , de esas emociones y
+            sensaciones que provocas dentro de mi que nunca habia sentido y son
+            increíblemente hermosas. La forma en que me demuestras tu cariño día
+            a día no tiene explicación, y la facilidad con la que sacas la mejor
+            versión de mí es algo que admiro profundamente. Eres única, y te lo
+            digo con el corazón en la mano: eres lo mejor que me ha pasado.
+            Quiero estar contigo, compartir más momentos y construir algo
+            hermoso juntos.
           </p>
           <p>¿Quieres ser mi novia? 🤎</p>
         </div>
@@ -387,13 +389,25 @@
       const envelope = document.getElementById('envelope');
       const letter = document.getElementById('letter');
       const heartsContainer = document.getElementById('hearts');
-
+      let isOpen = false;
       envelope.addEventListener('click', () => {
-        envelope.classList.add('open');
-        setTimeout(() => {
-          letter.classList.add('show');
-          createFloatingHearts();
-        }, 1000);
+        if (!isOpen) {
+          // Abrir carta
+          envelope.classList.add('open');
+          setTimeout(() => {
+            letter.classList.add('show');
+            createFloatingHearts();
+          }, 1000);
+          isOpen = true;
+        } else {
+          // Cerrar carta
+          envelope.classList.remove('open');
+          letter.classList.remove('show');
+          isOpen = false;
+
+          // Limpiar corazones
+          heartsContainer.innerHTML = '';
+        }
       });
 
       function createFloatingHearts() {
@@ -412,6 +426,36 @@
           }, i * 200);
         }
       }
+      const music = document.getElementById('bgMusic');
+      const toggleButton = document.getElementById('musicToggle');
+      const volumeControl = document.getElementById('volumeControl');
+
+      // Controlador para el botón de música
+      toggleButton.addEventListener('click', () => {
+        if (music.paused) {
+          music.play();
+          toggleButton.textContent = '🎵';
+        } else {
+          music.pause();
+          toggleButton.textContent = '🔇';
+        }
+      });
+
+      // Controlador de volumen
+      volumeControl.addEventListener('input', (e) => {
+        music.volume = e.target.value;
+      });
+
+      // Iniciar música después de la interacción del usuario
+      document.body.addEventListener(
+        'click',
+        function initMusic() {
+          music.play();
+          music.volume = 0.5;
+          document.body.removeEventListener('click', initMusic);
+        },
+        { once: true }
+      );
     </script>
   </body>
 </html>
