--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 
       .background-image:nth-child(5) {
         grid-column: 2;
-        grid-row: 1 / 3;
-        opacity: 0.9;
+        grid-row: 1;
+        opacity: 0.8;
       }
       .background-image:nth-child(6) {
         grid-column: 1;
@@ -100,6 +100,10 @@
       }
       .background-image:nth-child(7) {
         grid-column: 3;
+        grid-row: 3;
+      }
+      .background-image:nth-child(8) {
+        grid-column: 2;
         grid-row: 3;
       }
 
@@ -351,6 +355,7 @@
       <img src="imagenes/5.png" class="background-image" alt="Background 5" />
       <img src="imagenes/6.png" class="background-image" alt="Background 6" />
       <img src="imagenes/7.png" class="background-image" alt="Background 7" />
+      <img src="imagenes/8.png" class="background-image" alt="Background 8" />
     </div>
 
     <div class="container">
