--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         position: relative;
         display: flex;
         justify-content: center;
-        align-items: center;
+
         perspective: 1000px;
         z-index: 1;
       }
@@ -147,6 +147,8 @@
 
       .envelope.open {
         transform: rotateX(-180deg);
+        background: #57301080; /* Color base con transparencia */
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1); /* Sombra más suave */
       }
 
       .front {
@@ -229,7 +231,7 @@
         background: rgba(255, 255, 255, 0.641);
         border-radius: 15px;
         box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
-        padding: 30px;
+
         transform: translateY(80%);
         opacity: 0;
         transition: all 1s ease-in-out;
