--- a/index.html
+++ b/index.html
@@ -287,9 +287,33 @@
 
       /* Responsiveness */
 
-      @media (max-width: 400px) {
+      @media (max-width: 768px) {
+        .letter-content {
+          font-size: 16px;
+          line-height: 1.7;
+          padding: 15px;
+        }
+
+        .letter-content p {
+          margin-bottom: 1.2em;
+          text-indent: 1em;
+        }
+        .envelope {
+          width: 90vw; /* Usa el ancho de la ventana como referencia */
+          max-width: 320px; /* Límite máximo para pantallas grandes */
+          height: 60vw; /* Proporción 1:1.6 */
+          max-height: 200px;
+          margin: 0 5%; /* Márgenes laterales */
+        }
+        .stamp {
+          top: 10px;
+          right: 10px;
+          width: 40px;
+          height: 40px;
+        }
+
         .message {
-          font-size: 0.9rem;
+          font-size: 1rem !important;
         }
 
         .letter-content {
@@ -315,6 +339,35 @@
           .collage-container {
             height: 500px;
           }
+        }
+      }
+      @media (max-width: 480px) {
+        .envelope {
+          width: 85vw;
+          height: 55vw;
+          margin: 0 7%;
+        }
+
+        .message {
+          font-size: 0.9rem !important;
+        }
+
+        .letter {
+          width: 90vw !important;
+          max-width: 300px;
+        }
+        .letter-content {
+          font-size: 15px;
+          line-height: 1.5;
+          padding: 9px;
+        }
+
+        .letter-content h2 {
+          font-size: 1.4em;
+          margin-bottom: 20px;
+        }
+        .letter {
+          width: 90vw !important; /* Ajuste final de ancho */
         }
       }
       .music-player {
