--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         position: relative;
         display: flex;
         justify-content: center;
-
+        align-items: center;
         perspective: 1000px;
         z-index: 1;
       }
@@ -147,8 +147,6 @@
 
       .envelope.open {
         transform: rotateX(-180deg);
-        background: #57301080; /* Color base con transparencia */
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1); /* Sombra más suave */
       }
 
       .front {
@@ -231,7 +229,7 @@
         background: rgba(255, 255, 255, 0.641);
         border-radius: 15px;
         box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
-
+        padding: 30px;
         transform: translateY(80%);
         opacity: 0;
         transition: all 1s ease-in-out;
@@ -285,35 +283,62 @@
         }
       }
 
+      /* Instruction tooltip */
+      .instruction {
+        position: absolute;
+        bottom: -50px;
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: rgba(255, 255, 255, 0.9);
+        color: #573010;
+        padding: 10px 15px;
+        border-radius: 20px;
+        font-size: 16px;
+        box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+        animation: bounce 2s infinite;
+        pointer-events: none;
+        z-index: 100;
+      }
+
+      @keyframes bounce {
+        0%,
+        100% {
+          transform: translateX(-50%) translateY(0);
+        }
+        50% {
+          transform: translateX(-50%) translateY(-10px);
+        }
+      }
+
+      /* Pulse effect on the envelope */
+      .click-hint {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        border-radius: 15px;
+        box-shadow: 0 0 0 rgba(87, 48, 16, 0.4);
+        animation: pulse-ring 3s cubic-bezier(0.455, 0.03, 0.515, 0.955)
+          infinite;
+        pointer-events: none;
+      }
+
+      @keyframes pulse-ring {
+        0% {
+          box-shadow: 0 0 0 0 rgba(87, 48, 16, 0.4);
+        }
+        70% {
+          box-shadow: 0 0 0 15px rgba(87, 48, 16, 0);
+        }
+        100% {
+          box-shadow: 0 0 0 0 rgba(87, 48, 16, 0);
+        }
+      }
+
       /* Responsiveness */
 
-      @media (max-width: 768px) {
-        .letter-content {
-          font-size: 16px;
-          line-height: 1.7;
-          padding: 15px;
-        }
-
-        .letter-content p {
-          margin-bottom: 1.2em;
-          text-indent: 1em;
-        }
-        .envelope {
-          width: 90vw; /* Usa el ancho de la ventana como referencia */
-          max-width: 320px; /* Límite máximo para pantallas grandes */
-          height: 60vw; /* Proporción 1:1.6 */
-          max-height: 200px;
-          margin: 0 5%; /* Márgenes laterales */
-        }
-        .stamp {
-          top: 10px;
-          right: 10px;
-          width: 40px;
-          height: 40px;
-        }
-
+      @media (max-width: 800px) {
         .message {
-          font-size: 1rem !important;
+          font-size: 0.9rem;
         }
 
         .letter-content {
@@ -339,35 +364,6 @@
           .collage-container {
             height: 500px;
           }
-        }
-      }
-      @media (max-width: 480px) {
-        .envelope {
-          width: 85vw;
-          height: 55vw;
-          margin: 0 7%;
-        }
-
-        .message {
-          font-size: 0.9rem !important;
-        }
-
-        .letter {
-          width: 90vw !important;
-          max-width: 300px;
-        }
-        .letter-content {
-          font-size: 15px;
-          line-height: 1.5;
-          padding: 9px;
-        }
-
-        .letter-content h2 {
-          font-size: 1.4em;
-          margin-bottom: 20px;
-        }
-        .letter {
-          width: 90vw !important; /* Ajuste final de ancho */
         }
       }
       .music-player {
@@ -415,6 +411,7 @@
 
     <div class="container">
       <div class="envelope" id="envelope">
+        <div class="click-hint"></div>
         <div class="front">
           <div class="message">
             <p>Para la niña más bonita que existe.</p>
@@ -443,17 +440,21 @@
         </div>
         <div class="letter-hearts" id="hearts"></div>
       </div>
+      <div class="instruction" id="instruction">👆</div>
     </div>
 
     <script>
       const envelope = document.getElementById('envelope');
       const letter = document.getElementById('letter');
       const heartsContainer = document.getElementById('hearts');
+      const instruction = document.getElementById('instruction');
       let isOpen = false;
+
       envelope.addEventListener('click', () => {
         if (!isOpen) {
           // Abrir carta
           envelope.classList.add('open');
+          instruction.style.display = 'none';
           setTimeout(() => {
             letter.classList.add('show');
             createFloatingHearts();
@@ -464,6 +465,12 @@
           envelope.classList.remove('open');
           letter.classList.remove('show');
           isOpen = false;
+
+          // Mostrar instrucción nuevamente después de un tiempo
+          setTimeout(() => {
+            instruction.style.display = 'block';
+            instruction.textContent = '👆';
+          }, 1500);
 
           // Limpiar corazones
           heartsContainer.innerHTML = '';
@@ -486,6 +493,7 @@
           }, i * 200);
         }
       }
+
       const music = document.getElementById('bgMusic');
       const toggleButton = document.getElementById('musicToggle');
       const volumeControl = document.getElementById('volumeControl');
