--- a/index.html
+++ b/index.html
@@ -283,18 +283,18 @@
         }
       }
 
-      /* Instruction tooltip */
+      /* Instruction tooltip - Añadido sin alterar otros estilos */
       .instruction {
         position: absolute;
-        bottom: -50px;
+        bottom: -40px;
         left: 50%;
         transform: translateX(-50%);
-        background-color: rgba(255, 255, 255, 0.9);
+        background-color: rgba(255, 255, 255, 0.8);
         color: #573010;
-        padding: 10px 15px;
-        border-radius: 20px;
+        padding: 5px 10px;
+        border-radius: 15px;
         font-size: 16px;
-        box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         animation: bounce 2s infinite;
         pointer-events: none;
         z-index: 100;
@@ -306,31 +306,7 @@
           transform: translateX(-50%) translateY(0);
         }
         50% {
-          transform: translateX(-50%) translateY(-10px);
-        }
-      }
-
-      /* Pulse effect on the envelope */
-      .click-hint {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        border-radius: 15px;
-        box-shadow: 0 0 0 rgba(87, 48, 16, 0.4);
-        animation: pulse-ring 3s cubic-bezier(0.455, 0.03, 0.515, 0.955)
-          infinite;
-        pointer-events: none;
-      }
-
-      @keyframes pulse-ring {
-        0% {
-          box-shadow: 0 0 0 0 rgba(87, 48, 16, 0.4);
-        }
-        70% {
-          box-shadow: 0 0 0 15px rgba(87, 48, 16, 0);
-        }
-        100% {
-          box-shadow: 0 0 0 0 rgba(87, 48, 16, 0);
+          transform: translateX(-50%) translateY(-5px);
         }
       }
 
@@ -411,7 +387,6 @@
 
     <div class="container">
       <div class="envelope" id="envelope">
-        <div class="click-hint"></div>
         <div class="front">
           <div class="message">
             <p>Para la niña más bonita que existe.</p>
