--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
           <div class="message">
             <p>Para la niña más bonita que existe.</p>
             <div class="pulse">
-              <div class="toca">👆👆</div>
+              <div class="toca">👆</div>
             </div>
           </div>
 
