--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         position: relative;
         display: flex;
         justify-content: center;
-        align-items: center;
+
         perspective: 1000px;
         z-index: 1;
       }
@@ -147,6 +147,8 @@
 
       .envelope.open {
         transform: rotateX(-180deg);
+        background: #57301080; /* Color base con transparencia */
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1); /* Sombra más suave */
       }
 
       .front {
@@ -229,7 +231,7 @@
         background: rgba(255, 255, 255, 0.641);
         border-radius: 15px;
         box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
-        padding: 30px;
+
         transform: translateY(80%);
         opacity: 0;
         transition: all 1s ease-in-out;
@@ -285,9 +287,33 @@
 
       /* Responsiveness */
 
-      @media (max-width: 800px) {
+      @media (max-width: 768px) {
+        .letter-content {
+          font-size: 16px;
+          line-height: 1.7;
+          padding: 15px;
+        }
+
+        .letter-content p {
+          margin-bottom: 1.2em;
+          text-indent: 1em;
+        }
+        .envelope {
+          width: 90vw; /* Usa el ancho de la ventana como referencia */
+          max-width: 320px; /* Límite máximo para pantallas grandes */
+          height: 60vw; /* Proporción 1:1.6 */
+          max-height: 200px;
+          margin: 0 5%; /* Márgenes laterales */
+        }
+        .stamp {
+          top: 10px;
+          right: 10px;
+          width: 40px;
+          height: 40px;
+        }
+
         .message {
-          font-size: 0.9rem;
+          font-size: 1rem !important;
         }
 
         .letter-content {
@@ -313,6 +339,35 @@
           .collage-container {
             height: 500px;
           }
+        }
+      }
+      @media (max-width: 480px) {
+        .envelope {
+          width: 85vw;
+          height: 55vw;
+          margin: 0 7%;
+        }
+
+        .message {
+          font-size: 0.9rem !important;
+        }
+
+        .letter {
+          width: 90vw !important;
+          max-width: 300px;
+        }
+        .letter-content {
+          font-size: 15px;
+          line-height: 1.5;
+          padding: 9px;
+        }
+
+        .letter-content h2 {
+          font-size: 1.4em;
+          margin-bottom: 20px;
+        }
+        .letter {
+          width: 90vw !important; /* Ajuste final de ancho */
         }
       }
       .music-player {
@@ -343,21 +398,6 @@
         height: 5px;
         accent-color: #573010;
       }
-      .pulse {
-        position: absolute;
-        left: 45%; /* Centra horizontalmente */
-        transform: translateX(-50%); /* Ajuste fino para centrado perfecto */
-        bottom: 3px; /* Coloca el elemento 20px debajo de su contenedor padre */
-
-        /* Estilos existentes */
-        background: #57301000;
-        border-radius: 8px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
-        animation: pulse 2s infinite;
-      }
     </style>
   </head>
   <body>
@@ -378,11 +418,7 @@
         <div class="front">
           <div class="message">
             <p>Para la niña más bonita que existe.</p>
-            <div class="pulse">
-              <div class="toca">👆</div>
-            </div>
           </div>
-
           <div class="stamp">
             <div class="heart">🤎</div>
           </div>
